# jaeger-browser

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml  tsconfig.json
jaeger_browser/: __init__.py
src/: index.ts
